--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-toast": "^1.1.5",
     "@reduxjs/toolkit": "^1.9.5",
     "@smastrom/react-rating": "^1.3.1",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.364.0",
     "next": "^13.5.6",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-redux": "^8.1.1",
-    "tailwindcss": "3.3.3"
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "prettier": "^3.0.0",
